2003-06-13  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceprintjob.h:
	* gtksourceview/gtksourceprintjob.c
	(gtk_source_print_job_print_range_async): Set the idle handler
	priority to be lower than redraws (so the UI can be effectively
	updated) but higher than GtkTextView validation handlers.

2003-06-13  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* docs/reference/tmpl/printjob.sgml: Documented GtkSourcePrintJob.

	* gtksourceview/gtksourceprintjob.c: Added gtk-doc style headers
	to document the public API.
	(gtk_source_print_job_print_range)
	(gtk_source_print_job_print_range_async): Check that the given
	iters belong to the configured buffer.
	(gtk_source_print_job_get_print_job): Check for non-NULL before
	referencing the returned object.

2003-06-12  Gustavo Giraldez  <gustavo.giraldez@gmx.net>

	* gtksourceview/gtksourceprintjob.c (get_text_to_print): Add a
	sentinel line if the no text is available to print, so we can
	print empty documents.
	(break_line): Skip CR characters, so they are not printed for DOS
	encoded files.
	(print_line_number): Align line numbers the the to the base of the
	body text line.
	(print_display_line): Check that seg != NULL before getting the
	text pointer.

2003-06-12  Anders Carlsson  <andersca@codefactory.se>

	* gtksourceview/gtksourceview.c (draw_line_markers): 
	Use gdk_draw_pixbuf.

2003-06-12  Paolo Maggi <paolo.maggi@polito.it>

	* configure.in: removed unused GLIB_REQUIRED_VERSION

	* gtksourceview-1.0.pc.in: add ibgnomeprint-2.2 and remove
	glib-2.0 gdk-2.0 from Requires.

=== gtksourceview 0.3.0 ===
	
2003-06-07  Gustavo Giráldez  <gustavo.giraldez@gmx.net>

	* README
	* NEWS: Updated for new release

	* configure.in: Bumped version to 0.3.0

	* gtksourceview/gtksourceprintjob.c: Fixed translatable string,
	bug #114404

2003-06-06  Paolo Maggi  <paolo.maggi@polito.it>

	* TODO: Updated

	* docs/reference/gtksourceview-sections.txt: removed 
	gtk_source_buffer_find_bracket_match, added 